# Mosaic_Data_Conductor

./: .env.ex  .gitignore  README.md  create_folders.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  update.ps1  update.sh
etl_wo/: assets.py  definitions.py  schedule.py
etl_wo/common/: check_db.py  connect_db.py  universal_extract.py  universal_load.py  universal_transform.py
etl_wo/config/: config.py  mapping.json
etl_wo/etl/: check_db.py  connect_db.py  download_oms_file.py  extract.py  load_complex.py  load_normal.py  transform.py
etl_wo/etl/eln/: transform.py
etl_wo/etl/talon/: extract.py  load_complex.py  transform.py
etl_wo/jobs/eln/: __init__.py  db_check.py  extract.py  flow_config.py  load.py  sensor.py  transform.py
etl_wo/jobs/iszl/people/: download_people_iszl.py
etl_wo/jobs/job1/: __init__.py  db_check.py  extract.py  flow_config.py  load.py  load_complex.py  load_normal.py  transform.py
etl_wo/jobs/kvazar/: __init__.py  db_check.py  extract.py  load.py  sensor.py  transform.py
etl_wo/jobs/old_talon/: extract.py  load.py
etl_wo/jobs/talon/: download_oms_file.py  load_normal.py
